--- a/Client/manifest.json
+++ b/Client/manifest.json
@@ -12,7 +12,7 @@
   "manifestVersion": 1,
   "name": "MC Eternal",
   "version": "1.5",
-  "author": "adam98991",
+  "author": "",
   "files": [
     {
       "projectID": 225635,
@@ -57,11 +57,6 @@
     {
       "projectID": 277047,
       "fileID": 2578325,
-      "required": true
-    },
-    {
-      "projectID": 296045,
-      "fileID": 3222659,
       "required": true
     },
     {
@@ -135,11 +130,6 @@
       "required": true
     },
     {
-      "projectID": 224602,
-      "fileID": 3199040,
-      "required": true
-    },
-    {
       "projectID": 259230,
       "fileID": 3223824,
       "required": true
@@ -152,11 +142,6 @@
     {
       "projectID": 229084,
       "fileID": 2684033,
-      "required": true
-    },
-    {
-      "projectID": 287171,
-      "fileID": 3066865,
       "required": true
     },
     {
@@ -395,6 +380,11 @@
       "required": true
     },
     {
+      "projectID": 278398,
+      "fileID": 2567799,
+      "required": true
+    },
+    {
       "projectID": 309674,
       "fileID": 3003364,
       "required": true
@@ -450,6 +440,11 @@
       "required": true
     },
     {
+      "projectID": 663797,
+      "fileID": 3948415,
+      "required": true
+    },
+    {
       "projectID": 238222,
       "fileID": 3040523,
       "required": true
@@ -461,7 +456,7 @@
     },
     {
       "projectID": 344344,
-      "fileID": 2944142,
+      "fileID": 3586937,
       "required": true
     },
     {
@@ -580,6 +575,11 @@
       "required": true
     },
     {
+      "projectID": 419286,
+      "fileID": 3886235,
+      "required": true
+    },
+    {
       "projectID": 268495,
       "fileID": 3227897,
       "required": true
@@ -617,6 +617,11 @@
     {
       "projectID": 241721,
       "fileID": 3044416,
+      "required": true
+    },
+    {
+      "projectID": 496398,
+      "fileID": 3360902,
       "required": true
     },
     {
@@ -685,13 +690,13 @@
       "required": true
     },
     {
-      "projectID": 268566,
-      "fileID": 2835177,
+      "projectID": 361276,
+      "fileID": 3907817,
       "required": true
     },
     {
-      "projectID": 440585,
-      "fileID": 3239971,
+      "projectID": 268566,
+      "fileID": 2835177,
       "required": true
     },
     {
@@ -705,8 +710,18 @@
       "required": true
     },
     {
+      "projectID": 306549,
+      "fileID": 2906537,
+      "required": true
+    },
+    {
       "projectID": 223891,
       "fileID": 2526674,
+      "required": true
+    },
+    {
+      "projectID": 421605,
+      "fileID": 3156145,
       "required": true
     },
     {
@@ -727,6 +742,11 @@
     {
       "projectID": 223908,
       "fileID": 3168678,
+      "required": true
+    },
+    {
+      "projectID": 556777,
+      "fileID": 3656263,
       "required": true
     },
     {
@@ -791,7 +811,7 @@
     },
     {
       "projectID": 321139,
-      "fileID": 3283582,
+      "fileID": 3773827,
       "required": true
     },
     {
@@ -827,6 +847,11 @@
     {
       "projectID": 253043,
       "fileID": 3064112,
+      "required": true
+    },
+    {
+      "projectID": 400488,
+      "fileID": 3024769,
       "required": true
     },
     {
@@ -866,7 +891,7 @@
     },
     {
       "projectID": 226254,
-      "fileID": 3074246,
+      "fileID": 3784145,
       "required": true
     },
     {
@@ -891,7 +916,7 @@
     },
     {
       "projectID": 310059,
-      "fileID": 3194413,
+      "fileID": 3924863,
       "required": true
     },
     {
@@ -951,7 +976,7 @@
     },
     {
       "projectID": 358124,
-      "fileID": 3238582,
+      "fileID": 3754846,
       "required": true
     },
     {
@@ -995,13 +1020,13 @@
       "required": true
     },
     {
-      "projectID": 252042,
-      "fileID": 2756710,
+      "projectID": 303422,
+      "fileID": 3953103,
       "required": true
     },
     {
-      "projectID": 229708,
-      "fileID": 3093852,
+      "projectID": 252042,
+      "fileID": 2756710,
       "required": true
     },
     {
@@ -1055,23 +1080,23 @@
       "required": true
     },
     {
-      "projectID": 235338,
-      "fileID": 2963673,
-      "required": true
-    },
-    {
       "projectID": 314645,
       "fileID": 2951672,
       "required": true
     },
     {
-      "projectID": 233105,
-      "fileID": 2745846,
+      "projectID": 235338,
+      "fileID": 2963673,
       "required": true
     },
     {
       "projectID": 253211,
       "fileID": 2684561,
+      "required": true
+    },
+    {
+      "projectID": 233105,
+      "fileID": 2745846,
       "required": true
     },
     {
@@ -1090,13 +1115,13 @@
       "required": true
     },
     {
-      "projectID": 233113,
-      "fileID": 3087611,
+      "projectID": 285612,
+      "fileID": 3133651,
       "required": true
     },
     {
-      "projectID": 285612,
-      "fileID": 3133651,
+      "projectID": 233113,
+      "fileID": 3087611,
       "required": true
     },
     {
@@ -1105,18 +1130,13 @@
       "required": true
     },
     {
-      "projectID": 337000,
-      "fileID": 3171243,
-      "required": true
-    },
-    {
       "projectID": 323596,
       "fileID": 3028671,
       "required": true
     },
     {
-      "projectID": 229769,
-      "fileID": 3109315,
+      "projectID": 337000,
+      "fileID": 3171243,
       "required": true
     },
     {
@@ -1130,8 +1150,8 @@
       "required": true
     },
     {
-      "projectID": 325851,
-      "fileID": 2750468,
+      "projectID": 247661,
+      "fileID": 2626416,
       "required": true
     },
     {
@@ -1140,8 +1160,8 @@
       "required": true
     },
     {
-      "projectID": 247661,
-      "fileID": 2626416,
+      "projectID": 325851,
+      "fileID": 2750468,
       "required": true
     },
     {
@@ -1150,8 +1170,8 @@
       "required": true
     },
     {
-      "projectID": 226447,
-      "fileID": 2477566,
+      "projectID": 259957,
+      "fileID": 2440182,
       "required": true
     },
     {
@@ -1160,8 +1180,8 @@
       "required": true
     },
     {
-      "projectID": 259957,
-      "fileID": 2440182,
+      "projectID": 226447,
+      "fileID": 2477566,
       "required": true
     },
     {
@@ -1175,13 +1195,8 @@
       "required": true
     },
     {
-      "projectID": 309136,
-      "fileID": 2666556,
-      "required": true
-    },
-    {
       "projectID": 359407,
-      "fileID": 3251902,
+      "fileID": 3658279,
       "required": true
     },
     {
@@ -1196,7 +1211,7 @@
     },
     {
       "projectID": 236542,
-      "fileID": 3015079,
+      "fileID": 3801020,
       "required": true
     },
     {
@@ -1220,18 +1235,8 @@
       "required": true
     },
     {
-      "projectID": 310287,
-      "fileID": 2656993,
-      "required": true
-    },
-    {
-      "projectID": 245506,
-      "fileID": 2921659,
-      "required": true
-    },
-    {
-      "projectID": 227639,
-      "fileID": 3051450,
+      "projectID": 60089,
+      "fileID": 2671937,
       "required": true
     },
     {
@@ -1240,8 +1245,8 @@
       "required": true
     },
     {
-      "projectID": 60089,
-      "fileID": 2671937,
+      "projectID": 227639,
+      "fileID": 3051450,
       "required": true
     },
     {
@@ -1260,13 +1265,13 @@
       "required": true
     },
     {
-      "projectID": 257814,
-      "fileID": 3227279,
+      "projectID": 272335,
+      "fileID": 2645867,
       "required": true
     },
     {
-      "projectID": 272335,
-      "fileID": 2645867,
+      "projectID": 257814,
+      "fileID": 3227279,
       "required": true
     },
     {
@@ -1280,18 +1285,18 @@
       "required": true
     },
     {
-      "projectID": 243298,
-      "fileID": 3116493,
-      "required": true
-    },
-    {
       "projectID": 64578,
       "fileID": 3328811,
       "required": true
     },
     {
+      "projectID": 243298,
+      "fileID": 3116493,
+      "required": true
+    },
+    {
       "projectID": 265642,
-      "fileID": 3189062,
+      "fileID": 3864785,
       "required": true
     },
     {
@@ -1310,13 +1315,13 @@
       "required": true
     },
     {
-      "projectID": 283525,
-      "fileID": 2901775,
+      "projectID": 256717,
+      "fileID": 2666198,
       "required": true
     },
     {
-      "projectID": 256717,
-      "fileID": 2666198,
+      "projectID": 283525,
+      "fileID": 2901775,
       "required": true
     },
     {
@@ -1325,18 +1330,13 @@
       "required": true
     },
     {
-      "projectID": 282415,
-      "fileID": 2658551,
+      "projectID": 267901,
+      "fileID": 3048231,
       "required": true
     },
     {
       "projectID": 266784,
       "fileID": 3146549,
-      "required": true
-    },
-    {
-      "projectID": 267901,
-      "fileID": 3048231,
       "required": true
     },
     {
@@ -1350,13 +1350,13 @@
       "required": true
     },
     {
-      "projectID": 293602,
-      "fileID": 2925154,
+      "projectID": 228816,
+      "fileID": 2699056,
       "required": true
     },
     {
-      "projectID": 228816,
-      "fileID": 2699056,
+      "projectID": 293602,
+      "fileID": 2925154,
       "required": true
     },
     {
@@ -1480,13 +1480,13 @@
       "required": true
     },
     {
-      "projectID": 254602,
-      "fileID": 2891841,
+      "projectID": 283644,
+      "fileID": 2694382,
       "required": true
     },
     {
-      "projectID": 283644,
-      "fileID": 2694382,
+      "projectID": 254602,
+      "fileID": 2891841,
       "required": true
     },
     {
@@ -1500,13 +1500,13 @@
       "required": true
     },
     {
-      "projectID": 297057,
-      "fileID": 2668704,
+      "projectID": 303759,
+      "fileID": 2817842,
       "required": true
     },
     {
-      "projectID": 303759,
-      "fileID": 2817842,
+      "projectID": 297057,
+      "fileID": 2668704,
       "required": true
     },
     {
@@ -1545,18 +1545,18 @@
       "required": true
     },
     {
-      "projectID": 298187,
-      "fileID": 3005950,
-      "required": true
-    },
-    {
       "projectID": 308240,
       "fileID": 2837800,
       "required": true
     },
     {
-      "projectID": 254629,
-      "fileID": 2850842,
+      "projectID": 298187,
+      "fileID": 3005950,
+      "required": true
+    },
+    {
+      "projectID": 304894,
+      "fileID": 2650369,
       "required": true
     },
     {
@@ -1565,8 +1565,8 @@
       "required": true
     },
     {
-      "projectID": 304894,
-      "fileID": 2650369,
+      "projectID": 254629,
+      "fileID": 2850842,
       "required": true
     },
     {
@@ -1605,8 +1605,8 @@
       "required": true
     },
     {
-      "projectID": 496398,
-      "fileID": 3360902,
+      "projectID": 364129,
+      "fileID": 2946161,
       "required": true
     },
     {
@@ -1615,29 +1615,10 @@
       "required": true
     },
     {
-      "projectID": 364129,
-      "fileID": 2946161,
+      "projectID": 433389,
+      "fileID": 3876730,
       "required": true
-    },
-    { "projectID": 278398,
-      "fileID": 2567799,
-      "required": true
-    },
-    {
-      "projectID": 421605,
-      "fileID": 3156145,
-      "required": true
-    },
-    {
-      "projectID": 400488,
-      "fileID": 3024769,
-      "required": true
-    },
-	{
-	  "projectID": 306549,
-	  "fileID": 2906537,
-	  "required": true
-	}
+    }
   ],
   "overrides": "overrides"
 }
