--- a/Client/overrides/config/quark.cfg
+++ b/Client/overrides/config/quark.cfg
@@ -1258,42 +1258,61 @@ oddities {
 
         # A list of enchantment IDs you don't want the enchantment table to be able to create
         S:"Disallowed Enchantments" <
+			enderio:shimmer
+			enderio:soulbound
+			endercore:autosmelt
+			cofhcore:soulbound
+			tombstone:shadow_step
+			tombstone:plague_bringer
+			tombstone:magic_siphon
+			cyclicmagic:enchantment.excavation
+			cyclicmagic:enchantment.reach
+			cyclicmagic:enchantment.autosmelt
+			cyclicmagic:enchantment.beheading
+			cyclicmagic:enchantment.lifeleech
+			cyclicmagic:enchantment.venom
+			cyclicmagic:enchantment.waterwalking
+			bewitchment:magic_protection
+			mod_lavacow:corrosive
+			mod_lavacow:lifesteal
+			randomthings:magnetic
+			charm:magnetic
          >
 
         # How much to multiply the frequency of pieces where at least one of the same type has been generated
-        D:"Dupe Multiplier"=1.4
+        D:"Dupe Multiplier"=1.5
 
         # How much to multiply the frequency of pieces where incompatible pieces have been generated
-        D:"Incompatible Multiplier"=0.0
+        D:"Incompatible Multiplier"=0.75
 
         # An array of influences each candle should 
         S:Influences <
-            minecraft:unbreaking
-            minecraft:fire_protection
-            minecraft:knockback,minecraft:punch
-            minecraft:feather_falling
+            minecraft:unbreaking,elenaidodge:lightweight
+            minecraft:fire_protection,minecraft:fire_aspect,minecraft:flame,cofhcore:smelting,extrautils2:xu.burnerang
+            minecraft:knockback,minecraft:punch,ebwizardry:magic_protection
+            minecraft:feather_falling,ebwizardry:frost_protection,cyclicmagic:enchantment.launch
             minecraft:looting,minecraft:fortune,minecraft:luck_of_the_sea
-            minecraft:blast_protection
-            minecraft:silk_touch
-            minecraft:bane_of_arthropods
-            minecraft:protection
-            minecraft:respiration
-            minecraft:sweeping
-            minecraft:efficiency,minecraft:sharpness,minecraft:lure,minecraft:power
-            minecraft:aqua_affinity,minecraft:depth_strider
-            minecraft:thorns
-            minecraft:fire_aspect,minecraft:flame
-            minecraft:smite
+            minecraft:blast_protection,cofh:insight,endercore:xpboost
+            minecraft:silk_touch,cofh:holding,cofhcore:vorpal
+            minecraft:bane_of_arthropods,cofhcore:smashing,cyclicmagic:enchantment.magnet
+            minecraft:protection,charm:salvage,minecraft:infinity,fossil:paleontology
+            minecraft:respiration,theaurorian:lightning,theaurorian:lightningresistance
+            minecraft:sweeping,enderio:repellent,tombstone:soulbound,yoyos:collecting
+            minecraft:efficiency,minecraft:sharpness,minecraft:lure,minecraft:power,ebwizardry:shock_protection,charm:homing,extrautils2:xu.bladerang
+            minecraft:aqua_affinity,minecraft:depth_strider,extrautils2:xu.zoomerang,fossil:archeology
+            minecraft:thorns,cyclic:enchantment.expboost,mod_lavacow:poisonous,extrautils:xu.boomereaperang
+			cofhcore:leech,vampirism:vampireslayer,extrautils2:xu.kaboomerang,openblocks:explosive
+            minecraft:smite,enderio:witherweapon,enderio:witherarrow
          >
 
         # Set to false to disable the ability to influence enchantment outcomes with candles
         B:"Influencing Enabled"=true
 
         # The max amount of candles that can influence a single enchantment
-        I:"Influencing Max"=4
+        I:"Influencing Max"=8
 
         # How much each candle influences an enchantment. This works as a multiplier to its weight
-        D:"Influencing Power"=0.125
+        D:"Influencing Power"=0.250
 
         # The maximum enchanting power the matrix enchanter can accept
         I:"Max Bookshelves"=15
