block infestation properly in pharos beacon
i brained probably at 3am

--- a/Client/overrides/config/cyclicmagic.cfg
+++ b/Client/overrides/config/cyclicmagic.cfg
@@ -1333,7 +1333,7 @@ modpacks {
 		minecraft:levitation
 		mod_lavacow:corrosive
 		mod_lavacow:soiled
-		mod_lavacow:infestation
+		mod_lavacow:infested
 		randomthings:collapse
 		potioncore:love
 		potioncore:flight
