also block butterfingers potion effect
aaaaaaaaa

--- a/Client/overrides/config/cyclicmagic.cfg
+++ b/Client/overrides/config/cyclicmagic.cfg
@@ -1363,7 +1363,7 @@ modpacks {
 		potioncore:burst
 		cyclicmagic:potion.ender
 		cyclicmagic:potion.snow
-		cyclicmagic:potion.butterfingers
+		cyclicmagic:potion.butter
 		cyclicmagic:potion.bounce
 		cyclicmagic:potion.frostwalker
 		extrautils2:effect.xu2.doom
