disable cyclic monster balls
very balanced because they do not care what they catch :V

--- a/Client/overrides/config/cyclicmagic.cfg
+++ b/Client/overrides/config/cyclicmagic.cfg
@@ -890,7 +890,7 @@ cyclicmagic {
         B:MinerBlock=true
 
         # magic_net Set false to delete - requires restart [default: true]
-        B:MonsterBall=true
+        B:MonsterBall=false
 
         # Netherbrick tools have mining level of stone but improved stats.  Set false to delete - requires restart [default: true]
         B:NetherbrickTools=true
