--- a/Client/overrides/config/nuclearcraft.cfg
+++ b/Client/overrides/config/nuclearcraft.cfg
@@ -175,13 +175,13 @@ fission {
     B:fission_water_cooler_requirement=true
 
     # Can fission reactors overheat?
-    B:fission_overheat=false
+    B:fission_overheat=true
 
     # Will fission reactors explode when they overheat?
     B:fission_explosions=false
 
     # Modifies the radiation leaked by meltdowns.
-    D:fission_meltdown_radiation_multiplier=1.0
+    D:fission_meltdown_radiation_multiplier=2.0
 
     # Minimum side length of fission structures.
     I:fission_min_size=1
