disable potioncore armor display
it doesn't go very high for MCE standards, and overloaded armor bar and toughnessbar are coming back and would clash with it

--- a/Client/overrides/config/potioncore.cfg
+++ b/Client/overrides/config/potioncore.cfg
@@ -29,7 +29,7 @@ _options {
 
     # Renders a few extra things on the armor bar, including damage resistance,
     # magic shielding, armor toughness, and armor values over 20. [default: true]
-    B:"Render Armor Bar Overlays"=true
+    B:"Render Armor Bar Overlays"=false
 
     # Moves projectile and magic damage to different invulnerability timers, so you
     # can have a weapon that does multiple of those damage types at once. [default: true]
