--- a/Client/manifest.json
+++ b/Client/manifest.json
@@ -205,6 +205,11 @@
       "required": true
     },
     {
+      "projectID": 527361,
+      "fileID": 3745606,
+      "required": true
+    },
+    {
       "projectID": 254818,
       "fileID": 2992813,
       "required": true
@@ -367,6 +372,11 @@
     {
       "projectID": 229218,
       "fileID": 2855967,
+      "required": true
+    },
+    {
+      "projectID": 522992,
+      "fileID": 3903401,
       "required": true
     },
     {
@@ -755,6 +765,11 @@
       "required": true
     },
     {
+      "projectID": 298744,
+      "fileID": 2901463,
+      "required": true
+    },
+    {
       "projectID": 223908,
       "fileID": 3953392,
       "required": true
@@ -847,6 +862,11 @@
     {
       "projectID": 306626,
       "fileID": 2882138,
+      "required": true
+    },
+    {
+      "projectID": 303278,
+      "fileID": 4029456,
       "required": true
     },
     {
@@ -1267,6 +1287,11 @@
     {
       "projectID": 235442,
       "fileID": 2743885,
+      "required": true
+    },
+    {
+      "projectID": 245506,
+      "fileID": 3951291,
       "required": true
     },
     {
