--- a/Client/manifest.json
+++ b/Client/manifest.json
@@ -356,7 +356,7 @@
     },
     {
       "projectID": 232564,
-      "fileID": 3102463,
+      "fileID": 3663195,
       "required": true
     },
     {
@@ -420,6 +420,11 @@
       "required": true
     },
     {
+      "projectID": 421377,
+      "fileID": 3532213,
+      "required": true
+    },
+    {
       "projectID": 220318,
       "fileID": 2715506,
       "required": true
@@ -472,6 +477,11 @@
     {
       "projectID": 281791,
       "fileID": 2534481,
+      "required": true
+    },
+    {
+      "projectID": 344344,
+      "fileID": 3586937,
       "required": true
     },
     {
@@ -1676,7 +1686,7 @@
     },
     {
       "projectID": 319441,
-      "fileID": 3148983,
+      "fileID": 4060716,
       "required": true
     },
     {
